tdf#145248 don't start a drag if actively selecting

Change-Id: I00565adbb32a6d9109a75548a544e79ba1951650
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134896
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>